--- a/snmalloc-sys/Cargo.toml
+++ b/snmalloc-sys/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "snmalloc-sys"
-version = "0.3.6"
+version = "0.3.7"
 authors = ["schrodingerzhu <i@zhuyi.fan>"]
 edition = "2021"
 license = "MIT"
@@ -13,8 +13,8 @@ build = "build.rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-cc = {version = "1.0",optional=true}
-cmake = {version = "0.1",optional=true}
+cc = { version = "1.0", optional = true }
+cmake = { version = "0.1", optional = true }
 
 [features]
 default = ["build_cmake"]
@@ -31,4 +31,4 @@ check = []
 lto = []
 notls = []
 stats = []
-#usewait-on-target = []
+usewait-on-address = []
