--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -472,8 +472,9 @@ if(NOT SNMALLOC_HEADER_ONLY_LIBRARY)
       # has roughly the same effect.
       if (NOT ${SNMALLOC_CLEANUP} STREQUAL CXX11_DESTRUCTORS)
         check_linker_flag(CXX "-nostdlib++" SNMALLOC_LINKER_SUPPORT_NOSTDLIBXX)
-        if (SNMALLOC_LINKER_SUPPORT_NOSTDLIBXX)
-         target_link_options(${name} PRIVATE -nostdlib++)
+        if (SNMALLOC_LINKER_SUPPORT_NOSTDLIBXX AND NOT
+	    "${CMAKE_CXX_FLAGS}" MATCHES ".*_GLIBCXX_ASSERTIONS.*"))
+          target_link_options(${name} PRIVATE -nostdlib++)
         else()
           set_target_properties(${name} PROPERTIES LINKER_LANGUAGE C)
         endif()
