Minor tidy on CMake.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -365,7 +365,7 @@ if(NOT SNMALLOC_HEADER_ONLY_LIBRARY)
 
   function(make_tests TAG DEFINES)
     foreach(TEST_CATEGORY ${TEST_CATEGORIES})
-      message(STATUS "Adding ${TAG}/${TEST_CATEGORY} tests")
+      message(VERBOSE "Adding ${TAG}/${TEST_CATEGORY} tests")
       subdirlist(TESTS ${TESTDIR}/${TEST_CATEGORY})
       foreach(TEST ${TESTS})
         unset(SRC)
@@ -439,6 +439,20 @@ if(NOT SNMALLOC_HEADER_ONLY_LIBRARY)
     set(LLD_WORKS FALSE)
   endif()
 
+  if ((NOT CMAKE_SYSTEM_NAME STREQUAL "Haiku") AND (NOT SNMALLOC_ENABLE_DYNAMIC_LOADING))
+    message(STATUS "snmalloc: Using static TLS model")
+    set (SNMALLOC_STATIC_MODE_TLS TRUE)
+  endif()
+
+  if(SNMALLOC_OPTIMISE_FOR_CURRENT_MACHINE)
+    check_cxx_compiler_flag(-march=native SUPPORT_MARCH_NATIVE)
+    if (NOT SUPPORT_MARCH_NATIVE)
+      message_once(WARNING "Compiler does not support `-march=native` required by SNMALLOC_OPTIMISE_FOR_CURRENT_MACHINE")
+      set(SNMALLOC_OPTIMISE_FOR_CURRENT_MACHINE FALSE)
+    endif()
+endif()
+
+
   function(add_shim name type)
     add_library(${name} ${type} ${ARGN})
     target_link_libraries(${name} snmalloc)
@@ -460,19 +474,13 @@ if(NOT SNMALLOC_HEADER_ONLY_LIBRARY)
         target_compile_options(${name} PRIVATE -mprfchw)
       endif()
       # Static TLS model is unsupported on Haiku.
-      if ((NOT CMAKE_SYSTEM_NAME STREQUAL "Haiku") AND (NOT SNMALLOC_ENABLE_DYNAMIC_LOADING))
-        message(STATUS "snmalloc: Using static TLS model")
+      if (SNMALLOC_STATIC_MODE_TLS)
         target_compile_options(${name} PRIVATE -ftls-model=initial-exec)
         target_compile_options(${name} PRIVATE $<$<BOOL:${SNMALLOC_CI_BUILD}>:-g>)
       endif()
 
       if(SNMALLOC_OPTIMISE_FOR_CURRENT_MACHINE)
-        check_cxx_compiler_flag(-march=native SUPPORT_MARCH_NATIVE)
-        if (SUPPORT_MARCH_NATIVE)
-          target_compile_options(${name} PRIVATE -march=native)
-        else()
-          message(WARNING "Compiler does not support `-march=native` required by SNMALLOC_OPTIMISE_FOR_CURRENT_MACHINE")
-        endif()
+        target_compile_options(${name} PRIVATE -march=native)
       endif()
 
       # Ensure that we do not link against C++ stdlib when compiling shims.
