Mistaken commit of message_once

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -485,7 +485,7 @@ if(NOT SNMALLOC_HEADER_ONLY_LIBRARY)
   if(SNMALLOC_OPTIMISE_FOR_CURRENT_MACHINE)
     check_cxx_compiler_flag(-march=native SUPPORT_MARCH_NATIVE)
     if (NOT SUPPORT_MARCH_NATIVE)
-      message_once(WARNING "Compiler does not support `-march=native` required by SNMALLOC_OPTIMISE_FOR_CURRENT_MACHINE")
+      message(WARNING "Compiler does not support `-march=native` required by SNMALLOC_OPTIMISE_FOR_CURRENT_MACHINE")
       set(SNMALLOC_OPTIMISE_FOR_CURRENT_MACHINE FALSE)
     endif()
 endif()
